# striverai_agents

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
cli/: client.py
data/workflows/: gmail-send.yaml  moneymonk-contact.yaml  moneymonk-factuur.yaml  moneymonkcontacten.yaml  moneymonkfactuur.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
frontend/: index.html  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: ActionLog.tsx  BatchProgress.tsx  BrowserView.tsx  Layout.tsx  RecordButton.tsx  Screenshot.tsx  TaskForm.tsx  TaskStatus.tsx  WorkflowList.tsx
frontend/src/pages/: Dashboard.tsx  Settings.tsx
src/local_agent/: config.py
src/local_agent/agent/: actions.py  batch.py  loop.py  prompts.py  replay.py  workflow.py
src/local_agent/api/: app.py  models.py  routes.py  websocket.py
src/local_agent/browser/: manager.py  recorder.py  screenshot.py  session.py
src/local_agent/llm/: anthropic.py  base.py  factory.py  ollama.py
src/local_agent/utils/: errors.py  logging.py
